<resources>
    <string name="app_name">Uniform Marker</string>
    <string name="CadetFirst">First Name: </string>
    <string name="CadetLast">Last Name: </string>
    <string name="CadetRank">Rank: </string>
    <string name="CadetLevel">Level: </string>
    <string name="wedge">Wedge</string>
    <string name="jewelry"> Jewelry</string>
    <string name="hair">  Hair</string>
    <string name="facial_hair">Facial Hair</string>
    <string name="badges">Badges</string>
    <string name="tie">Tie</string>
    <string name="iron">Iron</string>
    <string name="dirty">Dirty</string>
    <string name="belt">Belt</string>
    <string name="ironPants">Iron</string>
    <string name="dirtyPants">Dirty</string>
    <string name="otherPants">Other</string>
    <string name="dirtyBoots">Dirty</string>
    <string name="shine">Shine</string>
    <string name="socks">Socks</string>
    <string name="otherBoots">Other</string>
    <string name="actualFirst">First</string>
    <string name="actualLast">Last</string>
    <string name="actualFlight">Flight</string>
    <string name="actualScore">Score</string>
    <string name="livescore">#</string>
    <string name="error">Error.</string>
    <string name="lowscores">Scores less than 12</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_cadet">New Cadet</string>
    <string name="search">Search</string>
    <string name="weekly_scores_12"><![CDATA[Scores < 12:]]></string>
</resources>
