<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewCadetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Cadet"
            android:fontFamily="@font/googlesans_bold"
            android:textSize="40sp"
            android:padding="20dp"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CadetLast"
                android:fontFamily="@font/googlesans_regular"
                android:textSize="25sp"/>
            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/addLastText"
                android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CadetFirst"
                android:fontFamily="@font/googlesans_regular"
                android:textSize="25sp"/>
            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/addFirstText"
                android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Flight: "
                android:fontFamily="@font/googlesans_regular"
                android:textSize="25sp"/>
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="E.g. 3"
                android:gravity="center"
                android:id="@+id/addFlightText"
                android:inputType="number"
                android:textSize="20dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Use number for flight unless otherwise specified."
            android:fontFamily="@font/googlesans_regular"
            android:textSize="25sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Band: use 100"
            android:fontFamily="@font/googlesans_regular"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Flag Party: use 101"
            android:fontFamily="@font/googlesans_regular"
            android:textSize="25sp"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:fontFamily="@font/googlesans_regular"
            android:textSize="15sp"
            android:textColor="@color/colorAccent"
            android:id="@+id/intErrorMessage"/>
        <Button
            android:id="@+id/addNewCadetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add new cadet"
            android:textSize="20sp"
            android:fontFamily="@font/googlesans_regular"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/cardview_light_background"
            android:padding="15dp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>